// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`< Stepper /> renders correctly with index: Stepper with index 1`] = `
<DocumentFragment>
  <div
    aria-label="Progress"
    class="chakra-stepper css-47o937"
    data-orientation="horizontal"
  >
    <div
      class="chakra-step css-9fgisr"
      data-orientation="horizontal"
      data-status="complete"
    >
      <div
        class="chakra-step__indicator css-ae2ufg"
        data-status="complete"
      >
        <div
          class="chakra-step__number css-1brar58"
          data-status="complete"
        >
          1
        </div>
      </div>
      <div
        class="css-cimg9i"
      >
        <h3
          class="chakra-step__title css-gryw16"
          data-status="complete"
        >
          First
        </h3>
        <p
          class="css-1mgms1o"
        >
          Contact Info lorem ipsum dolor sit amet, consectetur adipiscing elit.
        </p>
      </div>
      <div
        class="chakra-step__separator css-14zkmre"
        data-orientation="horizontal"
        data-status="complete"
        role="separator"
      />
    </div>
    <div
      class="chakra-step css-9fgisr"
      data-orientation="horizontal"
      data-status="complete"
    >
      <div
        class="chakra-step__indicator css-ae2ufg"
        data-status="complete"
      >
        <div
          class="chakra-step__number css-1brar58"
          data-status="complete"
        >
          2
        </div>
      </div>
      <div
        class="css-cimg9i"
      >
        <h3
          class="chakra-step__title css-gryw16"
          data-status="complete"
        >
          Second
        </h3>
        <p
          class="css-1mgms1o"
        >
          Date & Time
        </p>
      </div>
      <div
        class="chakra-step__separator css-14zkmre"
        data-orientation="horizontal"
        data-status="complete"
        role="separator"
      />
    </div>
    <div
      class="chakra-step css-9fgisr"
      data-orientation="horizontal"
      data-status="active"
    >
      <div
        class="chakra-step__indicator css-ae2ufg"
        data-status="active"
      >
        <div
          class="chakra-step__number css-1brar58"
          data-status="active"
        >
          3
        </div>
      </div>
      <div
        class="css-cimg9i"
      >
        <h3
          class="chakra-step__title css-gryw16"
          data-status="active"
        >
          Third
        </h3>
        <p
          class="css-1mgms1o"
        >
          Select Rooms
        </p>
      </div>
    </div>
  </div>
  <span
    hidden=""
    id="__chakra_env"
  />
</DocumentFragment>
`;

exports[`< Stepper /> renders correctly: Default Stepper 1`] = `
<DocumentFragment>
  <div
    aria-label="Progress"
    class="chakra-stepper css-47o937"
    data-orientation="horizontal"
  >
    <div
      class="chakra-step css-9fgisr"
      data-orientation="horizontal"
      data-status="complete"
    >
      <div
        class="chakra-step__indicator css-ae2ufg"
        data-status="complete"
      >
        <div
          class="chakra-step__number css-1brar58"
          data-status="complete"
        >
          1
        </div>
      </div>
      <div
        class="css-cimg9i"
      >
        <h3
          class="chakra-step__title css-gryw16"
          data-status="complete"
        >
          First
        </h3>
        <p
          class="css-1mgms1o"
        >
          Contact Info lorem ipsum dolor sit amet, consectetur adipiscing elit.
        </p>
      </div>
      <div
        class="chakra-step__separator css-14zkmre"
        data-orientation="horizontal"
        data-status="complete"
        role="separator"
      />
    </div>
    <div
      class="chakra-step css-9fgisr"
      data-orientation="horizontal"
      data-status="active"
    >
      <div
        class="chakra-step__indicator css-ae2ufg"
        data-status="active"
      >
        <div
          class="chakra-step__number css-1brar58"
          data-status="active"
        >
          2
        </div>
      </div>
      <div
        class="css-cimg9i"
      >
        <h3
          class="chakra-step__title css-gryw16"
          data-status="active"
        >
          Second
        </h3>
        <p
          class="css-1mgms1o"
        >
          Date & Time
        </p>
      </div>
      <div
        class="chakra-step__separator css-14zkmre"
        data-orientation="horizontal"
        data-status="active"
        role="separator"
      />
    </div>
    <div
      class="chakra-step css-9fgisr"
      data-orientation="horizontal"
      data-status="incomplete"
    >
      <div
        class="chakra-step__indicator css-ae2ufg"
        data-status="incomplete"
      >
        <div
          class="chakra-step__number css-1brar58"
          data-status="incomplete"
        >
          3
        </div>
      </div>
      <div
        class="css-cimg9i"
      >
        <h3
          class="chakra-step__title css-gryw16"
          data-status="incomplete"
        >
          Third
        </h3>
        <p
          class="css-1mgms1o"
        >
          Select Rooms
        </p>
      </div>
    </div>
  </div>
  <span
    hidden=""
    id="__chakra_env"
  />
</DocumentFragment>
`;
